###############################################################################
## NEWS to package MKmisc
###############################################################################

###########################################################
## Version 1.6
###########################################################
- Added function meanAD to compute the mean absolute deviation.
- Added function imputeSD to impute standard deviations for changes from
  baseline following the Cochrane handbook, Section 16.1.3.2.
- Modified function optCutoff. Should give better results now.
- Minor change in function perfMeasures to avoid unnecessary error message.


###########################################################
## Version 1.5
###########################################################
- Corrected minor bug in power.welch.t.test
- Change of function perfMeasures, now includes only statistics requiring
  dichotomization/discretization
- Added function perfScores including scores for binary classification
  (no dichotomization needed)
- Added functions to compute CV and two robust variants.
- Added functions to compute SNR and two robust variants.
- Added function to compute various confidence interval for CV.

###########################################################
## Version 1.4
###########################################################
- Changed encoding of vignette from latin1 to utf8, as requested by B. Ripley
- Added some more performance measures: no information rate, weighted accuracy,
  postive likelihood ratio, negative likelihood ratio, weighted predictive value,
  balanced predictive value, detection rate, weighted Brier score

###########################################################
## Version 1.3
###########################################################
- added function normDiffCI to compute confidence intervals for the difference
  of two means.
- extended the print function for confidence intervals. Now, optional additional