@@ -5,6 +5,8 @@
 ###########################################################
 ## Version 1.6
 ###########################################################
+- Removed bug in mi.t.test in case a subset is specified as reported by 
+  Pablo Emilio Verde
 - Added function meanAD to compute the mean absolute deviation.
 - Added function imputeSD to impute standard deviations for changes from
   baseline following the Cochrane handbook, Section 16.1.3.2.
